# sensors2mqtt

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  snmp.toml  snmp.toml.example
.github/workflows/: ci.yml  deb.yml  publish.yml
debian/: changelog  control  copyright  py3dist-overrides  python3-sensors2mqtt.install  python3-sensors2mqtt.postinst  rules  sensors2mqtt-ipmi-sensors.install  sensors2mqtt-local-control.install  sensors2mqtt-local.install  sensors2mqtt-local.postinst  sensors2mqtt-local.prerm  sensors2mqtt-snmp-control.install  sensors2mqtt-snmp.install
deploy/: env.example  sensors2mqtt-hwmon.service  sensors2mqtt-ipmi-sdr.service  sensors2mqtt-ipmi-sensors.service  sensors2mqtt-local-control.service  sensors2mqtt-local.service  sensors2mqtt-snmp-control.service  sensors2mqtt-snmp.service
docs/: TASKS.md  collectors.md  conf.py  configuration.md  gdoc2netcfg-sensors2mqtt-mqtt-credentials-requirements.md  gdoc2netcfg-snmp-cross-check.md  getting-started.md  index.md  local-control-plan.md  mqtt-broker-credentials-investigation.md  mqtt-topic-inventory.md  poe-toggle-plan.md  port-monitoring-and-poe-control-plan.md  vlan-pvid-control-handoff.md
docs/superpowers/plans/: 2026-06-12-box-sensor-walks.md  (+8 more)
packaging/: build-debs.py  capture-fixture.py  deb-version.py  deploy-rpi.py  nfpm-common.yaml  nfpm-local.yaml  smoke_test.py
packaging/scripts/: common-postinst.sh  common-prerm.sh  local-postinst.sh  local-prerm.sh
scripts/: cleanup_old_mqtt.py
src/sensors2mqtt/: __init__.py  base.py  discovery.py  security.py  snmp_client.py
tests/: conftest.py  snmp_helpers.py  test_base.py  test_discovery.py  test_hwmon.py  test_ipmi_sdr.py  test_ipmi_sensors.py  test_local_autodetect.py  test_local_base.py  test_local_control.py  test_local_hwmon.py  test_local_main.py  test_local_mellanox.py  test_local_rpi.py  test_local_sfp.py  test_local_ten64.py  test_security.py  test_snmp.py  test_snmp_client.py  test_snmp_control.py
tests/fixtures/: bmc_psu_response.xml  ipmitool_sdr_big_storage.txt  sensors_j_sw_bb_25g.json  snmp_test.toml  snmpwalk_gsm7252ps_dot1qpvid.txt  snmpwalk_gsm7252ps_fans.txt  snmpwalk_gsm7252ps_ifhighspeed.txt  snmpwalk_gsm7252ps_ifoperstatus.txt  snmpwalk_gsm7252ps_lldp_portdesc.txt  snmpwalk_gsm7252ps_lldp_sysname.txt  snmpwalk_gsm7252ps_poe.txt  snmpwalk_gsm7252ps_poe_detect.txt  snmpwalk_gsm7252ps_psu.txt  snmpwalk_gsm7252ps_vlan_names.txt  snmpwalk_m4300_dot1qpvid.txt  snmpwalk_m4300_fans.txt  snmpwalk_m4300_ifhighspeed.txt  snmpwalk_m4300_ifoperstatus.txt  snmpwalk_m4300_lldp_portdesc.txt  snmpwalk_m4300_lldp_sysname.txt  snmpwalk_m4300_psu.txt  snmpwalk_m4300_thermal.txt  snmpwalk_m4300_vlan_names.txt  snmpwalk_s3300_dot1qpvid.txt  snmpwalk_s3300_fans.txt  snmpwalk_s3300_ifhighspeed.txt  snmpwalk_s3300_ifoperstatus.txt  snmpwalk_s3300_lldp_portdesc.txt  snmpwalk_s3300_lldp_sysname.txt  snmpwalk_s3300_poe.txt  snmpwalk_s3300_poe_admin.txt  snmpwalk_s3300_poe_detect.txt  snmpwalk_s3300_psu.txt  snmpwalk_s3300_thermal.txt  snmpwalk_s3300_vlan_names.txt
tests/integration/: conftest.py  test_collector_integration.py  test_snmp_client_integration.py
(+109 files in other folders)
