[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensors2mqtt"
version = "0.2.0"
description = "Publish hardware sensor data to Home Assistant via MQTT auto-discovery"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "paho-mqtt>=2",
]

[project.optional-dependencies]
ipmi = ["requests"]

[tool.hatch.build.targets.wheel]
packages = ["src/sensors2mqtt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
