[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sensors2mqtt"
dynamic = ["version"]
description = "Publish hardware sensor data to Home Assistant via MQTT auto-discovery"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "paho-mqtt>=2",
]

[project.optional-dependencies]
ipmi = ["requests"]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/sensors2mqtt/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sensors2mqtt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
