[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sensors2mqtt"
dynamic = ["version"]
description = "Publish hardware sensor data to Home Assistant via MQTT auto-discovery"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "paho-mqtt>=2",
]

[project.optional-dependencies]
ipmi = ["requests"]
snmp = ["ezsnmp~=1.1"]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-rtd-theme",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Every push to main is a full release: post-release versioning gives a real,
# monotonic version that increments each commit (tag -> 0.3.0, +N commits ->
# 0.3.0.postN) rather than a .dev pre-release. These are also valid Debian
# versions verbatim, so the .deb reuses them with no conversion. See issue #2.
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/sensors2mqtt/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sensors2mqtt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: real-library tests needing ezsnmp + a local snmpsim agent",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
extend-exclude = ["_version.py", "debian"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "snmpsim-lextudio",
]
